# RHH

./: .gitignore
code/: build.bat  hh.cpp  hh.h  win32_hh.cpp
code/res/: wrong_win32_hh.cpp
code/res/11_video/: hh.h  win32_hh.cpp
code/res/12_video/: hh.cpp
code/res/13_video/: hh.cpp  hh.h  win32_hh.cpp
code/res/14_video/: win32_hh.cpp
code/res/15_video/: win32_hh.h
code/res/16_video/: hh.h
code/res/17_video/: hh.cpp~  hh.h
data/: win32_hh.sln
flappy_bird_sfml/: CMakeLists.txt  CMakeSettings.json
flappy_bird_sfml/inc/: asset_manager.hpp  bird.hpp  collision.hpp  definitions.h  flash.hpp  game.hpp  game_over_state.hpp  game_state.hpp  hud.hpp  input_manager.hpp  land.hpp  main_menu_state.hpp  pipe.hpp  sounds.hpp  splash_state.hpp  state.hpp  state_machine.hpp
flappy_bird_sfml/src/: asset_manager.cpp  bird.cpp  collision.cpp  flappy.cpp  flush.cpp  game.cpp  game_over_state.cpp  game_state.cpp  hud.cpp  input_manager.cpp  land.cpp  main_menu_state.cpp  pipe.cpp  sounds.cpp  splash_state.cpp  state_machine.cpp
hmh/: emacs_config_casey.txt
hmh/code/: linux_hh.cpp~  win32_hh.cpp
hmh/code/res/: 10_video_win32_hh.cpp  6_video_win32_hh.cpp  9_video_win32_hh.cpp
hmh/code/res/11_video/: win32_hh.cpp~
hmh/code/res/13_video/: win32_hh.h~
hmh/code/res/14_video/: build.bat  hh.cpp  hh.h
hmh/code/res/15_video/: hh.cpp  hh.h
hmh/code/res/16_video/: build.bat~  win32_hh.cpp
hmh/data/: win32_hh.sln
hmh/hmh/: CMakeLists.txt  CMakeSettings.json
hmh/hmh/inc/: def.h  hmh_win32.h
hmh/hmh/src/: hmh_win32.cpp
hmh_1/code/: build.bat
misc/: shell.bat
rain_game_from_the_charno/src/rain/: Game.java
